src/objects/EventApi__Schedule_Item__c.object
<CustomObject>
    <fields>
        <fullName>Guide__c</fullName>
        <description>Fetching GuideId from Event Object</description>
        <formula>EventApi__Event__r.Guide__c</formula>
        <label>Guide ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>

     <fields>
        <fullName>Room_Guide__c</fullName>
        <description>Return guideId of related room</description>
        <formula>EventApi__Room__r.EventApi__Event__r.Guide__c</formula>
        <label>Room GuideID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Guidebook_Import_Id__c</fullName>
        <label>Guidebook Import ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <externalId>true</externalId>
        <label>Session ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
</CustomObject>